# slang-format

./: .clang-format  .clang-tidy  .editorconfig  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.claude/rules/: docs.md  license.md  markdown.md  source.md  test.md
.claude/skills/clang-format/: SKILL.md
.claude/skills/cmake/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.github/workflows/: ci.yaml  cmake.yaml  release.yaml
cmake/: CompileFlags.cmake  Dependencies.cmake  Options.cmake
cmake/Modules/: FindClangTidy.cmake  License.cmake  Version.cmake
docs/: architecture.md  style-options.md  todo.md
source/: Empty.cpp  Empty.h  Format.cpp  Format.h  Rewriter.cpp  Rewriter.h  Style.cpp  Style.h  SyntaxHelper.h  main.cpp
test/: EmptyTest.cpp  FormatTest.cpp  RewriterTest.cpp  StyleTest.cpp  TestHelper.h
